--- a/src/app/websource/events/events.component.html
+++ b/src/app/websource/events/events.component.html
@@ -1,15 +1,19 @@
-<div class="viewport" [ngStyle]="{width: viewport.width+'px', height: viewport.height+'px'}" [class.background]="viewport.background" [class.dark]="viewport.dark">
+<div class="viewport" [ngStyle]="{
+  width: viewport.width+'px', 
+  height: viewport.height+'px',
+  padding: viewport.padding+'px'
+}">
   
-  <app-video *ngIf="currentEvent?.type === 'video'" [video]=currentEvent [viewport]="viewport"></app-video>
-  <app-audio *ngIf="currentEvent?.type === 'audio'" [audio]=currentEvent></app-audio>
-  <app-tts *ngIf="currentEvent?.type === 'tts'" [tts]=currentEvent></app-tts>
+  <div *ngFor="let event of currentEvents">
+    <app-video *ngIf="event?.type === 'video'" [video]=event [viewport]="viewport"></app-video>
+    <app-audio *ngIf="event?.type === 'audio'" [audio]=event></app-audio>
+    <app-tts *ngIf="event?.type === 'tts'" [tts]=event></app-tts>
+  </div>
   
-  <div class="viewport-anchor" [ngStyle]="{width: viewport.width+'px', height: viewport.height+'px'}"></div>
   <div id="cover" [ngStyle]="{
     left: viewport.width + 'px',
     width: (1280 - viewport.width)+'px',
     height: viewport.height+'px'
   }"></div>
 
-    
 </div>
