--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -1,28 +1,1 @@
-
-<div class="container">
-
-
-  <nb-card *ngIf="settings">
-    <nb-card-header>
-      <nb-toggle [disabled]="data.busy" [(checked)]="settings.api.enabled" (change)="toggleApi()">Api</nb-toggle>
-    </nb-card-header>
-    <nb-list>
-      <nb-list-item *ngFor="let k of object.keys(settings.api.listeners)">     
-        <nb-toggle (change)="toggleListener(k)" [(checked)]="settings.api.listeners[k].enabled" [disabled]="data.busy || !settings.api.enabled">{{k}}</nb-toggle>
-        <a [href]="url + 'websource/' + auth.currentUser?._id +'/' + k">Browser Source link</a>
-      </nb-list-item>
-    </nb-list>
-  </nb-card>
-
-  <nb-card *ngIf="settings">
-    <nb-card-header>
-      <nb-toggle [disabled]="data.busy" [(checked)]="settings.chatbot.enabled" (change)="toggleChatBot()">Chatbot</nb-toggle>
-    </nb-card-header>
-    <nb-list>
-      <nb-list-item *ngFor="let k of object.keys(settings.chatbot.categories)">
-        <nb-toggle (change)="toggleCategory(k)" [(checked)]="settings.chatbot.categories[k].enabled" [disabled]="data.busy || !settings.chatbot.enabled">{{k}}</nb-toggle><br>
-      </nb-list-item>
-    </nb-list>
-  </nb-card>
-
-</div>
+<p>Home Works!</p>
