--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -1,1 +1,16 @@
-<p>Home Works!</p>
+<nb-card>
+  <nb-card-header>
+    Welcome to cCarbn.io
+  </nb-card-header>
+  <nb-card-body>
+    You can start by enabling Twitch APIs in order to receive event data from twitch.
+    <br>
+    Then go to Web Source in order to set your events up.
+    <br>
+    <br>
+    <br>
+    The Hype Train functionality works but it's kinda complicated to set-up and the user interface is not intuitive yet...
+    <br>
+    Seek help on the <a href="https://discord.gg/uTmEUxGHKC" target="_blank">discord</a> if you're interested in it.
+  </nb-card-body>
+</nb-card>
