--- a/src/app/dashboard/twitch/elements/elements.component.html
+++ b/src/app/dashboard/twitch/elements/elements.component.html
@@ -37,8 +37,9 @@
 
         <nb-accordion multi>
             <nb-accordion-item *ngFor="let elem of elements" [expanded]="elem.expanded" class="element-entry">
-                <nb-accordion-item-header>
-                    <button nbButton status="primary" (click)="sendTestEvent($event, elem)"><nb-icon icon="cast"></nb-icon></button>
+                
+                <nb-accordion-item-header class="element-header">
+                    <button nbButton status="primary" nbTooltip="Send test to websource" nbTooltipStatus="primary" (click)="sendTestEvent($event, elem)"><nb-icon icon="cast"></nb-icon></button>
                     <div class="element-name">
                         {{elem.name}}
                     </div>
@@ -49,41 +50,77 @@
                         </div>
                     </div>
                 </nb-accordion-item-header>
+
                 <nb-accordion-item-body>
                     <nb-card class="element-card">
+
                         <nb-card-header class="conditions-header">                           
                             <nb-list>
-                                <nb-list-item *ngFor="let c of elem.conditions" class="conditions-entry">
+                                <nb-list-item *ngFor="let c of elem.conditions; let i = index" class="conditions-entry">
 
-                                    <nb-select [(selected)]="c.type" (selectedChange)="elem.changes=true">
-                                        <nb-option *ngFor="let type of ConditionTypes | keyvalue" [value]=type.key>{{type.value}}</nb-option>
-                                    </nb-select>
-                                
-                                    <nb-select *ngIf="c.type!=='user' && c.type!=='redeem'" [(selected)]="c.operator" (selectedChange)="elem.changes=true" size="small">
-                                        <nb-option *ngFor="let op of ComparisonOperators | keyvalue" [value]=op.key>{{op.value}}</nb-option>
-                                    </nb-select>
+                                    <div class="field-container">
+                                        <nb-select [(selected)]="c.type" (selectedChange)="elem.changes=true">
+                                            <nb-option *ngFor="let type of ConditionTypes | keyvalue" [value]=type.key>{{type.value}}</nb-option>
+                                        </nb-select>
+                                        <div class="anchor"><label>{{i==0 ? 'When' : 'AND'}}</label></div>
+                                    </div>
+
+
+
+                                    <div *ngIf="c.type!=='user' && c.type!=='redeem'" class="field-container">
+                                        <nb-select [(selected)]="c.operator" (selectedChange)="elem.changes=true" size="small">
+                                            <nb-option *ngFor="let op of ComparisonOperators | keyvalue" [value]=op.key>{{op.value}}</nb-option>
+                                        </nb-select>
+                                        <div class="anchor"><label>is</label></div>
+                                    </div>
                                     <nb-select *ngIf="c.type==='user'" [(selected)]="c.operator" (selectedChange)="elem.changes=true" size="small">
                                         <nb-option *ngFor="let op of UserOperators | keyvalue" [value]=op.key>{{op.value}}</nb-option>
                                         <nb-option *ngFor="let op of UserTypeOperators | keyvalue" [value]=op.key>{{op.value}}</nb-option>
                                     </nb-select>
-                                    <nb-select *ngIf="c.type==='redeem'" [(selected)]="c.operator" (selectedChange)="elem.changes=true" size="small">
-                                        <nb-option *ngFor="let op of RedemptionOperators | keyvalue" [value]=op.key>{{op.value}}</nb-option>
-                                    </nb-select>
+                                    <div *ngIf="c.type==='redeem'" class="field-container">
+                                        <nb-select [(selected)]="c.operator" (selectedChange)="elem.changes=true" size="small">
+                                            <nb-option *ngFor="let op of RedemptionOperators | keyvalue" [value]=op.key>{{op.value}}</nb-option>
+                                        </nb-select>
+                                        <div class="anchor"><label>is</label></div>
+                                    </div>
 
-                                    <input *ngIf="!c.operator.startsWith('type') && c.operator !== 'redeemed'" nbInput [type]="c.type==='user' ? 'text' : 'number'" [(ngModel)]="c.compared" (change)="elem.changes=true">
-                                    <nb-select *ngIf="c.operator.startsWith('type')" [(selected)]="c.compared" (selectedChange)="elem.changes=true">
-                                        <nb-option *ngFor="let ut of UserTypes | keyvalue" [value]=ut.key>{{ut.value}}</nb-option>
-                                    </nb-select>
-                                    <nb-select *ngIf="c.operator === 'redeemed'" [(selected)]="c.compared" (selectedChange)="elem.changes=true">
-                                        <nb-option *ngFor="let r of channelRewards" [value]=r>{{r.title}}</nb-option>
-                                    </nb-select>
+
+
+                                    <div *ngIf="c.type !== 'user' && c.type !== 'redeem'" class="field-container">
+                                        <input nbInput type="number" [(ngModel)]="c.compared" (change)="elem.changes=true">
+                                        <div class="anchor"><label>how many</label></div>
+                                    </div>
+
+                                    <div *ngIf="c.type === 'user' && c.operator[0]!=='t'" class="field-container">
+                                        <input nbInput type="text" [(ngModel)]="c.compared" (change)="elem.changes=true">
+                                        <div class="anchor"><label>username</label></div>
+                                    </div>
+                                    <div *ngIf="c.type === 'user' && c.operator[0]==='t'"class="field-container">
+                                        <nb-select [(selected)]="c.compared" (selectedChange)="elem.changes=true">
+                                            <nb-option *ngFor="let ut of UserTypes | keyvalue" [value]=ut.key>{{ut.value}}</nb-option>
+                                        </nb-select>
+                                        <div class="anchor"><label>what</label></div>
+                                    </div>
+
+                                    <div *ngIf="c.type === 'redeem'" class="field-container">
+                                        <nb-select [(selected)]="c.compared" (selectedChange)="elem.changes=true">
+                                            <nb-option *ngFor="let r of channelRewards" [value]=r>{{r.title}}</nb-option>
+                                        </nb-select>
+                                        <div class="anchor"><label>which</label></div>
+                                    </div>
+
+
 
                                     <button nbButton status="danger" [disabled]="elem.conditions.length<2" (click)="deleteCondition(elem, c)"><nb-icon icon="trash-2"></nb-icon></button>
+
                                 </nb-list-item>
                         
                                 <nb-list-item>
                                     <button nbButton status="primary" (click)="addCondition(elem)">ADD CONDITION</button>
-                                    <input nbInput [(ngModel)]="elem.name" fullWidth style="margin-left:1rem">
+                                    <div class="field-container" style="width: 100%; margin-left:1rem">
+                                        <input nbInput [(ngModel)]="elem.name" (change)="elem.changes=true" fullWidth>
+                                        <div class="anchor"><label>Element name</label></div>
+                                    </div>
                                 </nb-list-item>
                             </nb-list>
                         </nb-card-header>
@@ -128,16 +165,16 @@
                                         <div class="video-settings">
                                             <nb-list *ngIf="ev.type==='video'">
                                                 <nb-list-item>
-                                                    <nb-checkbox [(ngModel)]="ev.withPrevious" [disabled]="i===0">Don't wait for previous</nb-checkbox>
+                                                    <nb-checkbox [(ngModel)]="ev.withPrevious" (checkedChange)="elem.changes=true" [disabled]="i===0">Don't wait for previous</nb-checkbox>
                                                 </nb-list-item>
                                                 <nb-list-item *ngFor="let s of _videoSettings | keyvalue">
                                                     <div class="key">{{s.key}}</div>
                                                     <div class="value" *ngIf="s.value==='number'">
-                                                        <input nbInput type="number" [(ngModel)]="ev[s.key]" fullWidth>
+                                                        <input nbInput type="number" [(ngModel)]="ev[s.key]" (change)="elem.changes=true" fullWidth>
                                                         <div class="unit">px</div>
                                                     </div>
                                                     <div class="value" *ngIf="s.value === 'POSITION'">
-                                                        <nb-select [(selected)]="ev.position">
+                                                        <nb-select [(selected)]="ev.position" (selectedChange)="elem.changes=true">
                                                             <nb-option *ngFor="let p of _POSITION" [value]="p">{{p}}</nb-option>
                                                         </nb-select>
                                                     </div>
@@ -145,16 +182,16 @@
                                             </nb-list>
                                             <nb-list *ngIf="ev.type==='audio'">
                                                 <nb-list-item>
-                                                    <nb-checkbox [(ngModel)]="ev.withPrevious" [disabled]="i===0">Don't wait for previous</nb-checkbox>
+                                                    <nb-checkbox [(ngModel)]="ev.withPrevious" (checkedChange)="elem.changes=true" [disabled]="i===0">Don't wait for previous</nb-checkbox>
                                                 </nb-list-item>
                                                 <nb-list-item *ngFor="let s of _audioSettings | keyvalue">
                                                     <div class="key">{{s.key}}</div>
                                                     <div class="value" *ngIf="s.value==='number'">
-                                                        <input nbInput type="number" [(ngModel)]="ev[s.key]" fullWidth>
+                                                        <input nbInput type="number" [(ngModel)]="ev[s.key]" (change)="elem.changes=true" fullWidth>
                                                         <div class="unit">px</div>
                                                     </div>
                                                     <div class="value" *ngIf="s.value === 'POSITION'">
-                                                        <nb-select [(selected)]="ev.position">
+                                                        <nb-select [(selected)]="ev.position" (selectedChange)="elem.changes=true">
                                                             <nb-option *ngFor="let p of _POSITION" [value]="p">{{p}}</nb-option>
                                                         </nb-select>
                                                     </div>
@@ -166,15 +203,15 @@
 
                                     <div #tts *ngIf="ev.type==='tts'" class="tts-container">
 
-                                        <nb-select [(selected)]="ev.voice" placeholder="Select which voice to use">
+                                        <nb-select [(selected)]="ev.voice" (selectedChange)="elem.changes=true" placeholder="Select which voice to use">
                                             <nb-option *ngFor="let v of __ttsVoices | keyvalue" [value]="v.key">{{v.value}}</nb-option>
                                         </nb-select>
 
-                                        <nb-select [(selected)]="ev.message" placeholder="Select what to read">
+                                        <nb-select [(selected)]="ev.message" (selectedChange)="elem.changes=true" placeholder="Select what to read">
                                             <nb-option *ngFor="let o of _ttsOptions | keyvalue" [value]="o.key">{{o.value}}</nb-option>
                                         </nb-select>
 
-                                        <nb-checkbox [(ngModel)]="ev.withPrevious" [disabled]="i===0">Don't wait for previous</nb-checkbox>
+                                        <nb-checkbox [(ngModel)]="ev.withPrevious" (checkedChange)="elem.changes=true" [disabled]="i===0">Don't wait for previous</nb-checkbox>
 
                                     </div>
                                 
@@ -187,12 +224,12 @@
                                     </div>
 
                                 </nb-tab>
-                                <nb-tab tabIcon="file-add">
+                                <nb-tab tabTitle="Add" tabIcon="file-add">
                                     <nb-select placeholder="Select type of event" fullWidth [(selected)]="_singleSelection" (selectedChange)="addElement(elem, $event)">
                                         <nb-option *ngFor="let type of EventTypes | keyvalue" [value]="type.key">{{type.value}}</nb-option>
                                     </nb-select>
                                 </nb-tab>
-                                <nb-tab tabIcon="trash-2" [disabled]="!elem.events || elem.events.length<1">
+                                <nb-tab tabTitle="Delete" tabIcon="trash-2" [disabled]="!elem.events || elem.events.length<1">
                                     <nb-select placeholder="Select event to delete" fullWidth [(selected)]="_singleSelection" (selectedChange)="deleteEvent(elem, $event)">
                                         <nb-option *ngFor="let ev of elem.events; let i = index" [value]="i">{{ev.type}}</nb-option>
                                     </nb-select>
@@ -209,6 +246,7 @@
                             <button nbButton status="success" [disabled]="!elem.changes" (click)="saveElement(elem)">SAVE</button>
                             <button nbButton status="danger" (click)="deleteElement(elem)"><nb-icon icon="trash-2"></nb-icon></button>
                         </nb-card-footer>
+
                     </nb-card>
                 </nb-accordion-item-body>
             </nb-accordion-item>
@@ -216,7 +254,7 @@
 
         <nb-card class="add-element-card">
             <nb-card-body>
-                <button nbButton status="success" fullWidth (click)="addNewElement()">ADD NEW EVENT</button>
+                <button nbButton status="success" fullWidth (click)="addNewElement()">ADD NEW ELEMENT</button>
             </nb-card-body>
         </nb-card>
 
