some polishing to elements interface

--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -1,6 +1,8 @@
 <nb-card>
   <nb-card-header>
     Welcome to cCarbn.io
+    <br>
+    For the best experience, use this on desktop.
   </nb-card-header>
   <nb-card-body>
     You can start by enabling Twitch APIs in order to receive event data from twitch.
